syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "gen/api/v1;v1";

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string cover = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string cover = 4;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string cover = 5;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message DeleteProductRequest {
  int64 id = 1;
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (Product) {
    option (google.api.http) = {
      post: "/v1/products"
      body: "*"
    };
  }
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {
    option (google.api.http) = {
      patch: "/v1/products/{id}"
      body: "*"
    };
  }
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  }
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/products/{id}"
    };
  }
}


/*
   use api
    signup -> create user
    signin -> create session
    logout -> destroy session
    three roles
      admin -> can do everything
      product:view -> can view products
      product:edit -> can create, update, delete products
*/